In README, added info about a warning issued on build time.